--- a/src/app/Restock/Analytics/components/restaurant-alerts-widget/restaurant-alerts-widget.component.css
+++ b/src/app/Restock/Analytics/components/restaurant-alerts-widget/restaurant-alerts-widget.component.css
@@ -10,6 +10,7 @@
   padding: 10px 30px 10px 30px;
   box-shadow: 1px 0 8px rgba(0, 0, 0, 0.2);
   border-radius: 30px;
+  max-height: 300px;
 }
 
 mat-table {
@@ -17,7 +18,10 @@ mat-table {
   border-collapse: collapse;
   width: 100%;
 }
-
+.scroll-wrapper {
+  max-height: 270px; /* ajusta según tus necesidades */
+  overflow-y: auto;
+}
 mat-header-cell, mat-cell {
   padding: 12px;
   font-size: 14px;
@@ -44,7 +48,7 @@ button.low-stock {
   font-size: 14px;
   font-weight: 400;
   border-radius: 4px;
-  height: 30px;
+  height: 25px;
 }
 
 button.max-stock {
