--- a/src/app/Restock/Analytics/components/restaurant-alerts-widget/restaurant-alerts-widget.component.html
+++ b/src/app/Restock/Analytics/components/restaurant-alerts-widget/restaurant-alerts-widget.component.html
@@ -4,7 +4,7 @@
     <mat-table [dataSource]="alerts" class="mat-elevation-z1">
       <!-- Ingredient -->
       <ng-container matColumnDef="ingredient">
-        <mat-header-cell *matHeaderCellDef> Ingredient</mat-header-cell>
+        <mat-header-cell *matHeaderCellDef> Supplies</mat-header-cell>
         <mat-cell *matCellDef="let alert"> {{ alert.ingredient }}</mat-cell>
       </ng-container>
 
