--- a/src/app/Restock/Analytics/components/restaurant-pending-orders-widget/restaurant-pending-orders-widget.component.html
+++ b/src/app/Restock/Analytics/components/restaurant-pending-orders-widget/restaurant-pending-orders-widget.component.html
@@ -34,8 +34,8 @@
         <mat-cell *matCellDef="let o"> {{ o.state }}</mat-cell>
       </ng-container>
 
-      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+      <mat-header-row *matHeaderRowDef="getColumns()"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: getColumns()"></mat-row>
     </mat-table>
   </div>
 </div>
