--- a/src/app/Restock/Analytics/components/restaurant-last-supplies-widget/restaurant-last-supplies-widget.component.css
+++ b/src/app/Restock/Analytics/components/restaurant-last-supplies-widget/restaurant-last-supplies-widget.component.css
@@ -35,6 +35,7 @@
   min-width: 150px;
   height: 180px;
   box-shadow: 1px 2px 5px rgba(0,0,0,0.1);
+  align-content: space-around;
 }
 
 .ingredient-card h4 {
@@ -54,19 +55,37 @@
   color: #444;
 }
 
-/* Responsivo */
-@media (max-width: 1200px) {
-  .ingredient-card {
-    flex: 0 0 calc(25% - 1rem);
-  }
+.supplies-grid {
+  display: none;
 }
-@media (max-width: 900px) {
-  .ingredient-card {
-    flex: 0 0 calc(33.33% - 1rem);
+
+@media (max-width: 800px) {
+  .supplies-grid {
+    display: flex;
+    gap: 1rem;
+    overflow-x: auto;
+    background: #fff;
+    padding: 20px 30px;
+    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 30px;
+    height: 150px;
   }
-}
-@media (max-width: 600px) {
+
+  .ingredient-pair {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
   .ingredient-card {
-    flex: 0 0 calc(50% - 1rem);
+    background-color: #F4F4F4;
+    border-radius: 15px;
+    width: 215px;
+    padding: 0 0 0 15px;
+    min-height: 60px;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+    align-content: center;
+  }
+  .carousel {
+    display: none;
   }
 }
