--- a/src/app/Restock/Analytics/components/restaurant-last-supplies-widget/restaurant-last-supplies-widget.component.html
+++ b/src/app/Restock/Analytics/components/restaurant-last-supplies-widget/restaurant-last-supplies-widget.component.html
@@ -1,4 +1,4 @@
-<h3 class="widget-title">Latest Ingredients</h3>
+<h3 class="widget-title">Last added supplies</h3>
 <div class="carousel-container">
   <div class="carousel">
     <button mat-icon-button (click)="prev()" [disabled]="currentIndex === 0">
@@ -15,5 +15,13 @@
     <button mat-icon-button (click)="next()" [disabled]="currentIndex + 5 >= ingredients.length">
       <mat-icon>chevron_right</mat-icon>
     </button>
+  </div>
+  <div class="supplies-grid">
+    <div class="ingredient-pair" *ngFor="let pair of getPairs()">
+      <div class="ingredient-card" *ngFor="let i of pair">
+        <h4>{{ i.name }}</h4>
+        <p class="category">{{ i.category }}</p>
+      </div>
+    </div>
   </div>
 </div>
