--- a/src/app/Restock/Analytics/pages/analytics-overview-restaurant/analytics-overview-restaurant.component.css
+++ b/src/app/Restock/Analytics/pages/analytics-overview-restaurant/analytics-overview-restaurant.component.css
@@ -1,27 +1,26 @@
 .restaurant-summary-grid {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
-  padding: 2rem;
+  gap: 1rem;
+  padding: 1rem;
 }
 
 .row-1 {
   display: flex;
-  justify-content: space-between;
-  gap: 2rem;
+  gap: 1.5rem;
 }
 
 .widget-pending-orders {
-  flex: 6.5;
+  flex: 2;/* 66% aprox */
 }
 
 .widget-last-alerts {
-  flex: 3.5;
+  flex: 1; /* 33% aprox */
 }
 
 .row-2 {
   display: flex;
-  justify-content: center;
+
 }
 
 .widget-carousel {
@@ -29,12 +28,22 @@
   max-width: 1400px;
 }
 
-.placeholder-widget {
-  background-color: #f5f5f5;
-  border: 2px dashed #bbb;
-  padding: 2rem;
-  border-radius: 8px;
-  text-align: center;
-  color: #777;
-  font-style: italic;
+@media (max-width: 1190px) {
+  .row-1 {
+    flex-direction: column;
+  }
+
+  .pending-widget,
+  .alerts-widget,
+  .supplies-widget {
+    width: 100% !important;
+  }
+
+  .row-2 {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 768px){
+
 }
