feat(supplier-analytics): add responsive.

--- a/src/app/Restock/Analytics/components/supplier-account-widget/supplier-account-widget.component.css
+++ b/src/app/Restock/Analytics/components/supplier-account-widget/supplier-account-widget.component.css
@@ -3,11 +3,10 @@
   padding: 10px 30px 30px 30px;
   box-shadow: 1px 0 8px rgba(0, 0, 0, 0.2);
   border-radius: 30px;
-
 }
 .content {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   text-align: center;
 }
 .account-section {
@@ -17,6 +16,7 @@
 .account-section h4 {
   color: #4F8A5B;
   font-weight: lighter;
+  margin-top: 0;
 }
 
 .amount-row {
@@ -33,4 +33,24 @@
 .trend-icon {
   color: #4F8A5B;
   font-size: 28px;
+}
+
+@media (max-width: 800px) {
+  .account-widget {
+    padding: 16px;
+    min-height: 100px;
+    align-content: center;
+  }
+  .content {
+    justify-content: space-around;
+  }
+  .account-section h4 {
+    margin: 10px;
+  }
+  .mobile-header h3 {
+    font-family: Poppins, sans-serif;
+    font-weight: bold;
+    font-size: 23px;
+    margin-bottom: 10px;
+  }
 }
