--- a/src/app/Restock/Analytics/components/supplier-alerts-widget/supplier-alerts-widget.component.css
+++ b/src/app/Restock/Analytics/components/supplier-alerts-widget/supplier-alerts-widget.component.css
@@ -3,48 +3,57 @@
   padding: 10px 30px 30px 30px;
   box-shadow: 1px 0 8px rgba(0, 0, 0, 0.2);
   border-radius: 30px;
+}
+
+.widget-container mat-table {
+  background-color: #F4F4F4;
+}
 
 
-  .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    h2 {
-      font-family: Poppins, serif;
-      font-weight: 400;
-      font-size: 23px;
-    }
+.widget-container mat-header-cell {
+  font-weight: bold;
+  font-size: 14px;
+  color: #757575;
+}
+
+.widget-container mat-cell,
+.widget-container mat-header-cell {
+  border-bottom-color: #D6D6D6;
+  padding: 12px;
+  justify-content: center;
+}
+
+.widget-container button {
+  background-color: #4F8A5B;
+  color: white;
+  font-size: 14px;
+  font-weight: 400;
+  border-radius: 4px;
+  width: 80%;
+  height: 30px;
+}
+
+.widget-container mat-icon {
+  vertical-align: middle;
+  font-size: 20px;
+}
+
+@media (max-width: 800px) {
+  .mobile-header h3 {
+    font-family: Poppins, sans-serif;
+    font-weight: bold;
+    font-size: 23px;
+    margin-bottom: 10px;
   }
-
-  mat-table {
+  .widget-container {
+    padding: 1em 1em 0.2em 1em;
+  }
+  .widget-container mat-header-cell {
     background-color: #F4F4F4;
-
-    mat-header-cell {
-      font-weight: bold;
-      font-size: 12px;
-      color: #757575;
-    }
-
-    mat-cell,
-    mat-header-cell {
-      padding: 12px;
-      justify-content: center;
-    }
-
-    button {
-      background-color: #4F8A5B;
-      color: white;
-      font-size: 14px;
-      font-weight: 400;
-      border-radius: 4px;
-      width: 80%;
-      height: 30px;
-    }
-
-    mat-icon {
-      vertical-align: middle;
-      font-size: 20px;
-    }
+    padding: 0;
   }
-
+  .widget-container mat-cell {
+    background-color: white;
+    height: 10px;
+  }
 }
