--- a/src/app/Restock/Analytics/pages/analytics-overview-supplier/analytics-overview-supplier.component.css
+++ b/src/app/Restock/Analytics/pages/analytics-overview-supplier/analytics-overview-supplier.component.css
@@ -1,27 +1,48 @@
 .analytics-grid {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
-  padding: 2rem;
+  gap: 1rem;
+  padding: 1rem;
 }
 
-/* Primera fila: dos widgets en línea */
+/* Fila 1: dos widgets */
 .row1 {
   display: flex;
-  justify-content: space-between;
-  gap: 2rem;
+  gap: 1rem;
 }
 
-/* Segunda fila: centrado horizontal */
+/* Fila 2: centrado horizontal */
 .row2 {
+  display: flex;
+  justify-content: center;
 }
 
 /* Widgets */
 .widget-alerts {
-  flex: 7;
+  flex: 2;
 }
 
 .widget-account {
-  flex: 3;
+  flex: 1;
 }
 
+.widget-frequent {
+  width: 100%;
+}
+
+@media (max-width: 1190px) {
+  .row1 {
+    flex-direction: column;
+  }
+
+  .row2 {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .widget-alerts,
+  .widget-account,
+  .widget-frequent {
+    width: 100% !important;
+  }
+}
