feat(sales): fixing roots

--- a/src/app/public/dashboard-layout/dashboard-layout.component.css
+++ b/src/app/public/dashboard-layout/dashboard-layout.component.css
@@ -23,7 +23,8 @@
 
 .content-wrapper {
   padding: 24px;
-  background-color: #ffff;
+  background-color: #fff;
+  min-height: 100vh;
 }
 
 .principal-image {
