--- a/src/app/Restock/resource/supplier-catalog/components/supplier-modal/supplier-modal.component.html
+++ b/src/app/Restock/resource/supplier-catalog/components/supplier-modal/supplier-modal.component.html
@@ -5,6 +5,7 @@
 
     <div class="flex">
       <mat-form-field appearance="outline" class="filter-field">
+        <mat-icon matPrefix>search</mat-icon>
         <input matInput (keyup)="applyFilter($event)" placeholder="Search supplier" />
       </mat-form-field>
     </div>
@@ -36,8 +37,8 @@
           </td>
         </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-header-row *matHeaderRowDef="getColumns()"></tr>
+        <tr mat-row *matRowDef="let row; columns: getColumns();"></tr>
       </table>
     </div>
     <mat-paginator [pageSize]="5" [pageSizeOptions]="[5, 10, 15]" showFirstLastButtons></mat-paginator>
