feat(restaurant-supplier): add responsive.

--- a/src/app/Restock/resource/supplier-catalog/components/supplier-summary/supplier-summary.component.html
+++ b/src/app/Restock/resource/supplier-catalog/components/supplier-summary/supplier-summary.component.html
@@ -1,10 +1,11 @@
+<h3 class="mobile-subtitle">Suppliers</h3>
 <div class="summary-container">
-  <div class="column image-column">
+  <div class="image-column">
     <h4>{{ supplier.name }}</h4>
     <img src="../../../../../../assets/img-summary-supplier.png" alt="Supplier image"/>
   </div>
 
-  <div class="column info-column">
+  <div class="info-column">
     <p>Name: {{ supplier.name }}</p>
     <p>RUC: {{ supplier.ruc }}</p>
     <p>Category: {{ supplier.category }}</p>
@@ -12,7 +13,7 @@
     <p>Registration Date: {{ supplier.registrationDate }}</p>
     <p>Last Update: {{ supplier.lastUpdate }}</p>
   </div>
-  <div class="column info-column">
+  <div class="info-column">
     <p>Email: {{ supplier.email }}</p>
     <p>Phone: {{ supplier.phone }}</p>
     <p>Address: {{ supplier.address }}</p>
