--- a/src/app/Restock/resource/inventory/components/add-inventory-modal/add-inventory-modal.component.html
+++ b/src/app/Restock/resource/inventory/components/add-inventory-modal/add-inventory-modal.component.html
@@ -10,7 +10,7 @@
       <mat-label>Supply</mat-label>
       <mat-select [(ngModel)]="form.supply_id" name="supply_id">
         @for (s of supplies; track s) {
-          <mat-option [value]="s.id">{{ s.description }}</mat-option>
+        <mat-option [value]="s.id">{{ s.description }}</mat-option>
         }
       </mat-select>
     </mat-form-field>
@@ -27,13 +27,13 @@
     </mat-form-field>
 
     <!-- Action Buttons -->
-    <div class="flex justify-center gap-4 mt-6">
-      <button mat-stroked-button color="warn" type="button" (click)="close()">
+    <div class="">
+      <button mat-stroked-button type="button" (click)="close()">
         <mat-icon>cancel</mat-icon>
         CANCEL
       </button>
 
-      <button mat-flat-button color="primary" type="submit" (click)="submit()">
+      <button mat-flat-button type="submit" (click)="submit()">
         <mat-icon>system_update_alt</mat-icon>
         ADD
       </button>
