feat(profile): add observable to profile service.

--- a/src/app/Restock/profiles/components/profile-details/profile-details.component.html
+++ b/src/app/Restock/profiles/components/profile-details/profile-details.component.html
@@ -8,7 +8,7 @@
 
     <mat-card-content class="text">
       <div class="personal-details-form">
-        <h4 class="name">{{ profile.name }}</h4>
+        <h4 class="name">{{ profile.name }}  {{ profile.lastName }}</h4>
 
         <!-- Email -->
         <p class="info"><mat-icon>person</mat-icon> {{ profile.email }}</p>
