--- a/src/app/Restock/resource/inventory/components/add-inventory-modal/add-inventory-modal.component.html
+++ b/src/app/Restock/resource/inventory/components/add-inventory-modal/add-inventory-modal.component.html
@@ -6,7 +6,7 @@
 
   <form class="inventory-add-form">
     <!-- Supply Select -->
-    <mat-form-field appearance="fill" class="w-full mb-4">
+    <mat-form-field appearance="outline" class="w-full mb-4">
       <mat-label>Supply</mat-label>
       <mat-select [(ngModel)]="form.supply_id" name="supply_id">
         @for (s of supplies; track s) {
@@ -16,7 +16,7 @@
     </mat-form-field>
 
     <!-- Stock Select -->
-    <mat-form-field appearance="fill" class="w-full mb-4">
+    <mat-form-field appearance="outline" class="w-full mb-4">
       <mat-label>Stock</mat-label>
       <mat-select [(ngModel)]="form.stock" name="stock">
         <mat-option [value]="10">10 kg</mat-option>
@@ -26,17 +26,30 @@
       </mat-select>
     </mat-form-field>
 
+    <!-- Expiration date -->
+    <mat-form-field appearance="outline" class="w-full mb-4">
+      <mat-label>Expiration Date</mat-label>
+      <input matInput [matDatepicker]="picker" [(ngModel)]="form.expiration_date" name="expiration_date">
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+
     <!-- Action Buttons -->
-    <div class="">
-      <button mat-stroked-button type="button" (click)="close()">
+    <div class="buttons-section">
+      <mat-card-actions>
+      <button mat-stroked-button class="cancel-button" type="button" (click)="close()">
         <mat-icon>cancel</mat-icon>
         CANCEL
       </button>
 
-      <button mat-flat-button type="submit" (click)="submit()">
+      <button mat-flat-button class="add-button" type="submit" (click)="submit()">
         <mat-icon>system_update_alt</mat-icon>
         ADD
       </button>
+        </mat-card-actions>
+
+
+
     </div>
   </form>
 </div>
