--- a/src/app/Restock/resource/inventory/components/supply-form-modal/supply-form-modal.component.css
+++ b/src/app/Restock/resource/inventory/components/supply-form-modal/supply-form-modal.component.css
@@ -2,6 +2,28 @@
   padding: 2rem;
   max-width: 480px;
   font-family: 'Poppins', sans-serif;
+  background-color: #ffffff;
+}
+
+button {
+  color: white !important;
+  height: 50px;
+  border: none;
+  border-radius: 3px;
+  font-family: 'Inter', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  margin: 2.4rem .6rem 2rem .6rem;
+  transition: background-color 500ms ease, color 500ms ease;
+  align-items: center;
+}
+
+.create-button {
+  background-color: #4F8A5B !important;
+}
+
+.cancel-button {
+  background-color: #D9534F !important;
 }
 
 .dialog-title {
@@ -40,6 +62,11 @@
   margin-top: 2rem;
   display: flex;
   justify-content: space-between;
+}
+
+mat-card-actions {
+  display: flex;
+  justify-content: center;
 }
 
 ::ng-deep .custom-select-panel {
