--- a/src/app/Restock/resource/inventory/components/supply-form-modal/supply-form-modal.component.html
+++ b/src/app/Restock/resource/inventory/components/supply-form-modal/supply-form-modal.component.html
@@ -1,14 +1,14 @@
 <div class="dialog-container">
-  <h2 mat-dialog-title class="dialog-title">Create supply</h2>
+  <h2 mat-dialog-title class="dialog-title">{{ isEdit ? 'Update' : 'Create' }} supply</h2>
   <p class="dialog-subtitle">Complete the details of the new ingredient to add it to your inventory.</p>
 
   <form class="supply-form">
-    <mat-form-field appearance="fill" class="w-full">
+    <mat-form-field appearance="outline" class="w-full">
       <mat-label>Name</mat-label>
       <input matInput [(ngModel)]="form.name" name="name" required />
     </mat-form-field>
 
-    <mat-form-field appearance="fill" class="w-full">
+    <mat-form-field appearance="outline" class="w-full">
       <mat-label>Category</mat-label>
       <mat-select
         [(ngModel)]="form.category_id"
@@ -22,7 +22,7 @@
 
     </mat-form-field>
 
-    <mat-form-field appearance="fill" class="w-full">
+    <mat-form-field appearance="outline" class="w-full">
       <mat-label>Unit measure</mat-label>
       <mat-select [(ngModel)]="form.unit_measurement_id" name="unit" panelClass="custom-select-panel">
         @for (u of units; track u) {
@@ -31,7 +31,7 @@
       </mat-select>
     </mat-form-field>
 
-    <mat-form-field appearance="fill" class="w-full">
+    <mat-form-field appearance="outline" class="w-full">
       <mat-label>Description (optional)</mat-label>
       <textarea matInput [(ngModel)]="form.description" name="description"></textarea>
     </mat-form-field>
@@ -44,16 +44,17 @@
       </mat-radio-group>
     </div>
 
-
     <div class="actions">
-      <button mat-stroked-button color="warn" type="button" (click)="close()">
+      <mat-card-actions>
+      <button mat-stroked-button class="cancel-button" color="warn" type="button" (click)="close()">
         <mat-icon>close</mat-icon>
-        Cancel
+        CANCEL
       </button>
-      <button mat-flat-button color="primary" type="submit">
+      <button mat-flat-button class="create-button" color="primary" type="submit">
         <mat-icon>save</mat-icon>
-        {{ isEdit ? 'Update' : 'Create' }}
+        {{ isEdit ? 'UPDATE' : 'CREATE' }}
       </button>
+      </mat-card-actions>
     </div>
 </form>
 </div>
