feat(inventory): update supply selection to use name and mock supplies

--- a/src/app/Restock/resource/inventory/components/add-inventory-modal/add-inventory-modal.component.html
+++ b/src/app/Restock/resource/inventory/components/add-inventory-modal/add-inventory-modal.component.html
@@ -10,7 +10,7 @@
       <mat-label>Supply</mat-label>
       <mat-select [(ngModel)]="form.supply_id" name="supply_id">
         @for (s of supplies; track s) {
-        <mat-option [value]="s.id">{{ s.description }}</mat-option>
+        <mat-option [value]="s.id">{{ s.name }}</mat-option>
         }
       </mat-select>
     </mat-form-field>
