--- a/src/app/Restock/monitoring/restaurant-sales/components/register-sales/register-sales.component.css
+++ b/src/app/Restock/monitoring/restaurant-sales/components/register-sales/register-sales.component.css
@@ -27,9 +27,6 @@
     justify-content: space-between;
 }
 
-.content {
-    margin-right: 1.3rem;
-}
 
 .close-button {
     position: absolute;
@@ -81,7 +78,7 @@
     justify-content: center;
     gap: 4rem;
     margin-bottom: 1rem;
-    margin-top: 1rem;
+    margin-top: 2rem;
 }
 
 .button-cancel {
@@ -102,4 +99,14 @@ mat-table {
 
 .quantity {
     margin-top: 1.2rem;
+}
+
+.actions {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.mat-elevation-z2 {
+    margin-bottom: 1.5rem;
 }
