--- a/src/app/Restock/monitoring/restaurant-sales/components/sale-confirmation/sale-confirmation.component.html
+++ b/src/app/Restock/monitoring/restaurant-sales/components/sale-confirmation/sale-confirmation.component.html
@@ -1,10 +1,10 @@
-<div class="modal-overlay" (click)="cerrarComponente()">
+<div class="modal-overlay" (click)="closeComponente()">
     <div class="modal-content" (click)="$event.stopPropagation()">
-        <button mat-icon-button class="close-button" (click)="cerrarComponente()">
+        <button mat-icon-button class="close-button" (click)="closeComponente()">
             <mat-icon>close</mat-icon>
         </button>
 
-        <p class="title">Venta registrada Exitosamente</p>
+        <p class="title">Sale Registered Successfully</p>
         <mat-icon class="check">check_circle</mat-icon>
     </div>
 </div>
