--- a/src/app/Restock/monitoring/restaurant-sales/components/show-sales-not-added-to-inventory/show-sales-not-added-to-inventory.component.html
+++ b/src/app/Restock/monitoring/restaurant-sales/components/show-sales-not-added-to-inventory/show-sales-not-added-to-inventory.component.html
@@ -1,6 +1,6 @@
-<div class="modal-overlay">
-    <div class="modal-content modal-scrollable">
-        <button mat-icon-button class="close-button" (click)="cerrarComponente()">
+<div class="modal-overlay" (click)="closeComponent()">
+    <div class="modal-content modal-scrollable" (click)="$event.stopPropagation()">
+        <button mat-icon-button class="close-button" (click)="closeComponent()">
             <mat-icon>close</mat-icon>
         </button>
 
@@ -48,11 +48,11 @@
 
 
         <div class="buttons">
-            <button class="button-cancel" mat-raised-button (click)="cerrarComponente()">
+            <button class="button-cancel" mat-raised-button (click)="closeComponent()">
                 CANCEL <mat-icon>cancel</mat-icon>
             </button>
 
-            <button class="button-register" mat-raised-button>
+            <button class="button-register" (click)="registerSalesToInventory()" mat-raised-button>
                 REGISTER <mat-icon>check_circle</mat-icon>
             </button>
         </div>
