feat(sales): adding sales html

--- a/src/app/Restock/monitoring/restaurant-sales/pages/sales/sales.component.html
+++ b/src/app/Restock/monitoring/restaurant-sales/pages/sales/sales.component.html
@@ -14,7 +14,7 @@
     <p class="text-question">Want to update your inventory? Select the sales you want here:</p>
     <button mat-raised-button class="registered-sales-btn" (click)="openSalesNotAddedToInventoryModal()">
         <span class="btn-content">
-            REGISTERED SALES NOT ADDED TO INVENTORY
+            REGISTERED SALES NOT DISCOUNTED IN INVENTORY
             <mat-icon>view_list</mat-icon>
         </span>
     </button>
