--- a/src/app/Restock/monitoring/restaurant-sales/components/show-sales-not-added-to-inventory/show-sales-not-added-to-inventory.component.html
+++ b/src/app/Restock/monitoring/restaurant-sales/components/show-sales-not-added-to-inventory/show-sales-not-added-to-inventory.component.html
@@ -5,7 +5,7 @@
         </button>
 
         <div>
-            <h2 class="title">REGISTERED SALES NOT ADDED TO INVENTORY</h2>
+            <h2 class="title">REGISTERED SALES NOT DISCOUNTED IN INVENTORY</h2>
             <p class="sub-text">Select the sales you want to deduct the supplies used from the inventory..</p>
         </div>
 
