--- a/src/app/Restock/monitoring/restaurant-sales/components/show-sales-not-added-to-inventory/show-sales-not-added-to-inventory.component.html
+++ b/src/app/Restock/monitoring/restaurant-sales/components/show-sales-not-added-to-inventory/show-sales-not-added-to-inventory.component.html
@@ -39,7 +39,7 @@
                     <ng-container matColumnDef="actions">
                         <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                         <mat-cell *matCellDef="let element">
-                            <mat-icon>description</mat-icon>
+                            <mat-icon (click)="openSaleDetail(element)">description</mat-icon>
                             <mat-checkbox (change)="toggleSelection(element, $event.checked)"
                                 [checked]="isSelected(element)">
                             </mat-checkbox>
@@ -65,3 +65,7 @@
         </div>
     </div>
 </div>
+
+<!-- Component: Modal to show sale detail -->
+<app-sale-detail *ngIf="showModalSaleDetail" [sale]="selectedSale" (close)="closeSaleDetailModal()">
+</app-sale-detail>
