--- a/src/app/shared/components/base-modal/base-modal.component.html
+++ b/src/app/shared/components/base-modal/base-modal.component.html
@@ -1,14 +1,20 @@
-@if (isOpen) {
-  <div class="modal-backdrop" (click)="closeModal()"></div>
-  <div class="modal-container">
+@if (visible) {
+  <div class="base-modal" [style.width]="width">
     <div class="modal-header">
-      <h2>{{ title }}</h2>
-      <button mat-icon-button (click)="closeModal()">
-        <mat-icon>close</mat-icon>
-      </button>
+      <h2 class="modal-title">{{ title }}</h2>
+      @if (closable) {
+        <button mat-icon-button (click)="handleClose()">
+          <mat-icon>close</mat-icon>
+        </button>
+      }
     </div>
+
     <div class="modal-body">
-      <ng-container [ngTemplateOutlet]="projectedContent"></ng-container>
+      <ng-content></ng-content>
+    </div>
+
+    <div class="modal-footer">
+      <ng-content select="[modal-footer]"></ng-content>
     </div>
   </div>
 }
