feat(modals): update supply form modal to reflect CategoryService in label and clean up imports

--- a/src/app/Restock/resource/inventory/components/supply-form-modal/supply-form-modal.component.html
+++ b/src/app/Restock/resource/inventory/components/supply-form-modal/supply-form-modal.component.html
@@ -9,7 +9,7 @@
     </mat-form-field>
 
     <mat-form-field appearance="outline" class="w-full">
-      <mat-label>Category</mat-label>
+      <mat-label>CategoryService</mat-label>
       <mat-select
         [(ngModel)]="form.category_id"
         name="category"
