feat(styles): update font family to Poppins and enhance button styles for better UI

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,22 @@ body {
 
 body {
     margin: 0;
-    /* fuente por default */
-    font-family: 'Inter', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
+
+.dialog-unified-size {
+  max-height: 80vh;
+  min-height: 20vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.green-button {
+  align-items: center;
+  gap: 0.5rem;
+  background-color: #4F8A5B !important;
+  color: white !important;
+  border-radius: 2px;
+  padding: 15px 30px;
+}
