feat(form): update ngModel binding for two-way data binding and clean up unused NgZone injection

--- a/src/app/shared/components/create-and-edit-form/create-and-edit-form.component.html
+++ b/src/app/shared/components/create-and-edit-form/create-and-edit-form.component.html
@@ -17,7 +17,7 @@
               [type]="field.type === 'currency' ? 'number' : field.type"
               [name]="field.name"
               [step]="field.type === 'currency' ? '0.01' : '1'"
-              [ngModel]="form[field.name]"
+              [(ngModel)]="form[field.name]"
               (ngModelChange)="form[field.name] = $event; emitForm()"
             />
           </mat-form-field>
