feat(orders): split orders component, add services & assemblers, seed db.json with sample orders, and improve orders UI

--- a/src/app/Restock/resource/orders-to-suppliers/components/orders-toolbar/orders-toolbar.component.html
+++ b/src/app/Restock/resource/orders-to-suppliers/components/orders-toolbar/orders-toolbar.component.html
@@ -37,7 +37,7 @@
     <button
       mat-flat-button
       class="custom-green-button"
-      (click)="openCreateOrderModal()"
+      (click)="onCreateOrder()"
     >
       CREATE
       <mat-icon>add_circle</mat-icon>
