feat(orders): add and refactor services, assemblers, and entities; improve orders table section

--- a/src/app/Restock/resource/orders-to-suppliers/components/orders-table/orders-table.component.html
+++ b/src/app/Restock/resource/orders-to-suppliers/components/orders-table/orders-table.component.html
@@ -28,8 +28,7 @@
   <!-- Requested Products Column -->
   <ng-container matColumnDef="requestedProducts">
     <th mat-header-cell *matHeaderCellDef>N° Requested Products</th>
-    <td mat-cell *matCellDef="let order">0</td>
-    <!-- Puedes reemplazar con la lógica correcta luego -->
+    <td mat-cell *matCellDef="let order">{{ order.supplies?.length }}</td>
   </ng-container>
 
   <!-- Total Price Column -->
