feat(orders): added detail view modal, extended services,

--- a/src/app/Restock/resource/orders-to-suppliers/components/orders-toolbar/orders-toolbar.component.html
+++ b/src/app/Restock/resource/orders-to-suppliers/components/orders-toolbar/orders-toolbar.component.html
@@ -27,7 +27,11 @@
 
     <mat-form-field appearance="outline" class="filter-field">
       <mat-label>Filter by Supplier</mat-label>
-      <mat-select [(ngModel)]="selectedSupplierFilter">
+      <mat-select
+        [value]="selectedSupplierFilter"
+        (selectionChange)="onSupplierChange($event.value)"
+      >
+        <mat-option [value]="null">All</mat-option>
         <mat-option *ngFor="let supplier of suppliers" [value]="supplier.id">
           {{ supplier.name }}
         </mat-option>
