--- a/src/app/Restock/resource/orders-to-suppliers/components/orders-table/orders-table.component.html
+++ b/src/app/Restock/resource/orders-to-suppliers/components/orders-table/orders-table.component.html
@@ -22,7 +22,9 @@
   <!-- Supplier Column -->
   <ng-container matColumnDef="supplier">
     <th mat-header-cell *matHeaderCellDef>Supplier</th>
-    <td mat-cell *matCellDef="let order">{{ order.supplier_id }}</td>
+    <td mat-cell *matCellDef="let order">
+      {{ getSupplierName(order.supplier_id) }}
+    </td>
   </ng-container>
 
   <!-- Requested Products Column -->
@@ -43,7 +45,7 @@
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let order">
-      <button mat-icon-button (click)="onViewDetails(order.id)">
+      <button  mat-icon-button (click)="onViewDetails(order)">
         <mat-icon>visibility</mat-icon>
       </button>
     </td>
